libcimgui/generator_output/cimgui_impl_dx11.h

typedef struct ID3D11Device_t ID3D11Device;
typedef struct ID3D11DeviceContext_t ID3D11DeviceContext;
IMGUI_IMPL_API
CIMGUI_API bool cImGui_ImplDX11_Init(ID3D11Device* device, ID3D11DeviceContext* device_context);
IMGUI_IMPL_API
CIMGUI_API void cImGui_ImplDX11_Shutdown(void);
IMGUI_IMPL_API
CIMGUI_API void cImGui_ImplDX11_NewFrame(void);
IMGUI_IMPL_API
CIMGUI_API void cImGui_ImplDX11_RenderDrawData(ImDrawData* draw_data);
// Use if you want to reset your rendering device without losing Dear ImGui state.
IMGUI_IMPL_API
CIMGUI_API void cImGui_ImplDX11_InvalidateDeviceObjects(void);
IMGUI_IMPL_API
CIMGUI_API bool cImGui_ImplDX11_CreateDeviceObjects(void);